--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,102 @@
+.app {
+  width: 1024px;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.app > h1 {
+  text-align: center;
+  margin: 1.5rem 0;
+  font-size: 1.5rem;
+}
+
 .container {
-  padding: 0 2rem;
+  width: 100%;
+  min-height: 80vh;
+  display: grid;
+  grid-template-areas:
+    "side upload"
+    "side process"
+    "side process";
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.container > * {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 1rem;
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.sideBar {
+  grid-area: side;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.sideBar > div {
+  width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.sideBar > div > div {
+  width: 8rem;
+  height: 6rem;
+  margin: 0.5rem 0;
+  cursor: pointer;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.sideBar > div > div > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.upload {
+  grid-area: upload;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.upload > div {
+  width: 12rem;
+  height: 8rem;
+  margin: 1rem auto;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.upload > div > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.process {
+  grid-area: process;
+}
+
+.process > div {
+  width: 12rem;
+  height: 12rem;
+  margin: 1.2rem auto;
+}
+
+.process > div > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 2px solid rgb(37, 111, 138);
+}
+
+.button {
+  padding: 0.8rem 1.5rem;
+  background: rgb(37, 111, 138);
+  color: #fff;
+  font-weight: 700;
+  border: none;
+  font-family: inherit;
+  border-radius: 4px;
+}
+
+.button:disabled {
+  background: #ccc;
+}
+
+.border {
+  border: 5px solid rgb(37, 111, 138);
 }
